syntax = "proto3";
package DecentralCardGame.cardchain.cardchain;

import "gogoproto/gogo.proto";

option go_package = "github.com/DecentralCardGame/Cardchain/x/cardchain/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.goproto_stringer) = false;
  int64 votingRightsExpirationTime = 1;
  uint64 collectionSize = 2;
  string collectionBaseUnitPrice = 3 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];;
  uint64 activeCollectionsAmount = 4;
  string collectionCreationFee = 5 [(gogoproto.nullable) = false, (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Coin"];;
}
